some changes made.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="bg-dark">
   <div class="container ">
        <div class="row">
-           <div class="col-md-4">
+           <div class="col-md-4 col-sm-6 ">
               <div class="video-card mt-3  text-light">
                  <img src="./img/alasi engineer-tn.jpg" alt="tn" class="img-fluid thumbnail">
                  <div class="d-flex ">
@@ -51,7 +51,7 @@
               </div>
            </div>
 
-           <div class="col-md-4">
+           <div class="col-md-4 col-sm-6 ">
             <div class="video-card mt-3  text-light">
                 <img src="./img/o-maahi-tn.jpg" alt="tn" class="img-fluid thumbnail">
                 <div class="d-flex ">
@@ -72,7 +72,7 @@
              </div>
            </div>
 
-           <div class="col-md-4">
+           <div class="col-md-4 col-sm-6 ">
             <div class="video-card mt-3  text-light">
                 <img src="./img/CID-tn.jpg" alt="tn" class="img-fluid thumbnail1">
                 <div class="d-flex ">
@@ -97,7 +97,7 @@
 
 
        <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
            <div class="video-card mt-3  text-light">
               <img src="./img/alasi engineer-tn.jpg" alt="tn" class="img-fluid thumbnail">
               <div class="d-flex ">
@@ -118,7 +118,7 @@
            </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
          <div class="video-card mt-3  text-light">
              <img src="./img/o-maahi-tn.jpg" alt="tn" class="img-fluid thumbnail">
              <div class="d-flex ">
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
          <div class="video-card mt-3  text-light">
              <img src="./img/CID-tn.jpg" alt="tn" class="img-fluid thumbnail1">
              <div class="d-flex ">
@@ -164,7 +164,7 @@
 
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
            <div class="video-card mt-3 text-light">
               <img src="./img/alasi engineer-tn.jpg" alt="tn" class="img-fluid thumbnail">
               <div class="d-flex ">
@@ -185,7 +185,7 @@
            </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
          <div class="video-card mt-3  text-light">
              <img src="./img/o-maahi-tn.jpg" alt="tn" class="img-fluid thumbnail">
              <div class="d-flex ">
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 ">
          <div class="video-card mt-3 text-light">
              <img src="./img/CID-tn.jpg" alt="tn" class="img-fluid thumbnail1">
              <div class="d-flex ">
