home page created in index file.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,26 @@
     </style>
 </head>
 <body class="bg-dark">
+<div class="  row text-light mt-4 mb-3">
+   <div class="col-md-2 ">
+      <span class="ms-3"><i class="fa-solid fa-bars fa-lg text-light"></i></span>
+      <span class="fw-bold ms-3"><img src="./img/youtube-logo-bg.png" alt="" height="50px">YouTube <sup>IN</sup></span>
+   </div>
+   <div class="col-md-1" >
 
+   </div>
+    <div class="col-md-6 text-end "> 
+      <form class="d-flex" role="search">
+      <span class="input-group mt-2"><input class="form-control bg-dark text-light  rounded-5" type="search"  placeholder="Search" value="Search" aria-label="Search">
+      <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span></span>
+      <span class="ms-3 mt-2"><i class="fa-solid fa-microphone fa-xl mt-3"></i></span>
+    </form>
+   </div>
+    <div class="col-md-3 text-end  mt-2">
+      <span class="me-3"><i class="fa-solid fa-ellipsis-vertical fa-xl"></i></span>
+      <span class="me-4"><button type="button" class="btn btn-outline-primary"><i class="fa-regular fa-user text-primary pe-1 " "></i>Sign in</button></span>
+   </div>
+</div>
 
 
 
